# result-reporting

./: .editorconfig  .gitignore  Dockerfile  README.md  RESULTS.csv  config.yml  pyproject.toml  run.py
.github/workflows/: contain_me.yml
don/: __init__.py
don/static/css/: main.css
don/static/js/: main.js
don/templates/: admin.html  base.html  footer.html  header.html  index.html  voting_methods.html
don/utils/: __init__.py  logger.py
don/views/: __init__.py  admin.py  results.py
